# ibi-fullstack-finops-dashboard

./: .gitignore  AGENT_USAGE.md  CLAUDE.md  Mid_Fullstack_Assignment_Lumina_Capital.docx  README.md  docker-compose.yml  render.yaml
.claude/: mcp.json
.claude/commands/: add-test.md  (+7 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  constants.py  dependencies.py  exceptions.py  main.py
backend/app/api/: health.py
backend/app/api/v1/: clients.py  insights.py  portfolio.py  router.py  transactions.py  violations.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  client.py  portfolio_position.py  transaction.py  violation.py
backend/app/schemas/: base.py  client.py  insight.py  llm.py  portfolio.py  transaction.py  violation.py
backend/app/services/: insight_service.py  portfolio_service.py  upload_service.py  validation_service.py  violation_service.py
backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  mock_provider.py  openai_provider.py
backend/app/utils/: csv_parser.py  fifo_engine.py
backend/tests/: conftest.py  factories.py  test_fifo_engine.py  test_portfolio_service.py  test_upload_endpoint.py  test_validation_service.py  test_violation_service.py
docs/: api-reference.md  architecture.md  db-design.md  deployment.md  setup.md  testing.md
frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
(+75 files in other folders)
