[project]
name = "ibi-finops-backend"
version = "1.0.0"
description = "IBI FinOps Dashboard - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "sqlalchemy==2.0.31",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    "pandas==2.2.2",
    "openpyxl==3.1.5",
    "anthropic==0.28.0",
    "openai>=1.30.0",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "factory-boy==3.3.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
